Fixes -
1) Search field in tree area.
2) White space around the purple area
3) Current year in footer

--- a/packages/ext-theme-crisp-e3d6823b-ee55-4b48-b149-3df5a94e598b/sass/src/Component.scss
+++ b/packages/ext-theme-crisp-e3d6823b-ee55-4b48-b149-3df5a94e598b/sass/src/Component.scss
@@ -150,6 +150,7 @@
 
 div.slide.head {
     color: #157fcc;
+    padding-left: 11px !important;
 }
 
 div.slide.head h3 {
@@ -829,5 +830,9 @@ ii.
   z-index: 1;
   position: relative;
   border-color: #4183c4;
+}
+
+.announce.instapaper_body.md {
+    padding-left: 11px !important;
 }
 
